# template-project

./: .gitignore  .travis.yml  3rdparty.cmake  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.sh  clean.sh  clone.sh  tests-install.sh  tests.cmake
cmake/: projConfig.cmake.in
export/proj/: exports.h
src/proj/: empty.c
tests/: defs.h  driver.c  exports.c  suites.h
tests/install/: CMakeLists.txt  test.sh
